Bug 73522 - segfault opening a particular file
Summary: segfault opening a particular file
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: have-backtrace target:4.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-01-12 18:48 UTC by Terrence Enger
Modified: 2014-01-16 01:44 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
typescript with backtrace with symbols (15.48 KB, text/plain)
2014-01-12 18:48 UTC, Terrence Enger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Terrence Enger 2014-01-12 18:48:21 UTC
Created attachment 91905 [details]
typescript with backtrace with symbols

As Foss mentioned this in comment 6 on bug 72293, I am setting status
NEW and platform All.

The SIGSEGV is a regression since commit fe5fb25, fetched 2014-01-10
04:29 UTC, which exhibits the CRASH described in bug 72293.

STR:
(0) Download file DeleteRowBug.ods attached to bug 72293.
(1) Open it from the command line.  Program segfaults.

The backtrace is from master commit e36c8a6, fetched 2014-01-10 04:29
UTC, configured as:
    --enable-option-checking=fatal
    --enable-dbgutil
    --enable-crashdump
    --without-system-postgresql
    --without-myspell-dicts
    --with-extra-buildid
    --without-doxygen
    --with-external-tar=/home/terry/lo_hacking/git/src
built and executing on debian-wheezy 64-bit.
Comment 1 Commit Notification 2014-01-14 11:53:34 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3b614521b6d3f6f238a73053c7cb40b42e19287b

resolved fdo#73522 always create LinkManager if it doesn't exist yet



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Terrence Enger 2014-01-16 01:44:08 UTC
Verified on Linux with master commit f95d743, fetched 2014-01-14 20:53 UTC.

Thank you, Eike.
Terry.