resolved fdo#73522 always create LinkManager if it doesn't exist yet

Regression introduced with 8fde2885236d5490be8f54e96dfe4a63d9bb9dec
Crash happened under ScExternalRefManager::maybeLinkExternalFile()
pLinkMgr->InsertFileLink(). ScDocument::GetLinkManager() introduced
GetDocLinkManager().getLinkManager(bAutoCalc) leading to the LinkManager
being created only if bAutoCalc is set, which may not be the case during
file import. Changed to unconditionally create the LinkManager again so
the link can actually be inserted. Whatever the intention was, that
needs rework.

Change-Id: I2ae66ac7f62c3cfd92c5bf1a147feb06b0155275